# specification-assistant

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  DOCKER.md  Dockerfile  README.md  docker-compose.yml  keys_to_extract.txt  pyproject.toml  pytest.ini  setup-windows.ps1  start.sh
src/: __init__.py
src/pdf_reader/: README.md  api.py  app.py  database_setup.md  dependencies.py  docker-compose.yml  llm_key_extractor.py  main.py  models.py  process_pdfs.py
src/pdf_reader/backend/: app.py  config.py  database.py  dependencies.py
src/pdf_reader/backend/models/: __init__.py  document.py  extraction_result.py  user.py
src/pdf_reader/backend/routers/: __init__.py  auth.py  excel.py  llm.py  pdf.py  pdf_download.py
src/pdf_reader/backend/schemas/: __init__.py  auth.py  domain.py  requests.py
src/pdf_reader/backend/services/: __init__.py  auth.py  document.py  extraction_result.py  key_metadata.py  llm_key_extractor.py  llm_prompts.py  process_pdfs.py
src/pdf_reader/backend/tests/: README.md  conftest.py
src/pdf_reader/backend/tests/unit/: test_auth.py  test_excel_router.py  test_pdf_router.py  test_process_pdfs.py
src/pdf_reader/frontend/: .gitignore  MIGRATION_GUIDE.md  README.md  index.html  package-lock.json  package.json  svelte.config.js  vite.config.js  vite.config.ts
src/pdf_reader/frontend/archived_vanilla_js/: DEPRECATED.md
src/pdf_reader/frontend/archived_vanilla_js/templates/: index.html
src/pdf_reader/frontend/src/: App.tsx  app.html  main.tsx
src/pdf_reader/frontend/templates/: index.html
src/pdf_reader/routers/: excel.py  llm.py  pdf.py
src/pdf_reader/schemas/: __init__.py  domain.py  requests.py  responses.py
src/pdf_reader/services/: llm_key_extractor.py  process_pdfs.py
src/pdf_reader/static/css/: styles.css
src/pdf_reader/static/js/: app.js
src/pdf_reader/templates/: index.html
tests/: README.md  __init__.py  conftest.py
tests/unit/: test_excel_router.py  test_pdf_router.py  test_process_pdfs.py
(+106 files in other folders)
